Fri Aug  4 07:57:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Asynch_IO.h:
        * ace/Event_Handler.h:
        * ace/Framework_Component_T.h:
        * ace/Hash_Map_Manager_T.h:
        * ace/IO_SAP.h:
        * ace/Local_Tokens.h:
        * ace/LSOCK_Connector.h:
        * ace/Map_Manager.h:
        * ace/Map_T.h:
        * ace/WFM_Reactor.h:
          Doxygen improvements

Thu Aug  3 10:39:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Connector.h:
          Improved documentation

Wed Aug  2 22:54:24 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * THANKS: Added Eric Danielou to the hall of fame.

Wed Aug  2 21:27:59 UTC 2006  Adam Mitz  <mitza@ociweb.com>

        * bin/PerlACE/Run_Test.pm:

          Added two new packaged-scoped variables, $PerlACE::ACE_ROOT and
          $PerlACE::TAO_ROOT.  $PerlACE::TAO_ROOT is set to the TAO_ROOT
          environment variable, if one exists.  If not it is set to
          $ACE_ROOT/TAO.  $PerlACE::ACE_ROOT is the same as the ACE_ROOT
          envrionment variable so it's just there for convenience and for
          symmetry.

Wed Aug  2 20:19:04 UTC 2006  Adam Mitz  <mitza@ociweb.com>

        * bin/tao_other_tests.lst:
          Added new test (TAO/orbsvcs/tests/ImplRepo/Bug_2604_Regression).

Wed Aug  2 18:16:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Connector.cpp:
          Const improvements

        * ace/Caching_Utility_T.h:
        * ace/config-lite.h:
        * ace/Event_Handler.h:
        * ace/Framework_Component.h:
        * ace/Lock.h:
        * ace/Lock_Adapter_T.h:
        * ace/Null_Mutex.h:
        * ace/Object_Manager.h:
        * ace/Object_Manager_Base.h:
        * ace/Proactor.cpp:
        * ace/Process_Manager.h:
        * ace/Semaphore.h:
        * ace/Thread_Exit.h:
          Doxygen improvements

Wed Aug  2 15:50:48 UTC 2006  Simon McQueen  <sm@prismtech.com>

        * bin/tao_other_tests.lst:
